# emr

./: .gitignore  CLAUDE.md
backend/: pyproject.toml
backend/emr/: contracts.py  main.py
backend/emr/api/: app.py
backend/emr/pipeline/: __init__.py  stage1_extract.py
backend/emr/prompts/: meta_template.md
backend/emr/services/: __init__.py  fs_safe.py  path_resolver.py  pdf_parser.py  prompt_loader.py
backend/emr/store/: __init__.py  jobs_db.py  settings_store.py
backend/tests/: test_app_factory.py  test_fs_safe.py  test_jobs_db.py  test_path_resolver.py  test_pdf_parser.py  test_prompt_loader.py  test_settings_store.py  test_stage1_extract.py
backend/tests/fixtures/prompts/: PROMPTS-CLI.sample.md
docs/superpowers/plans/: 2026-06-18-emr-analyzer-implementation-plan.md
docs/superpowers/specs/: 2026-06-16-emr-analyzer-design.md
docs/workflows/: load-context.md  save-context.md  sync.md
reference-docs/: COWORK-CLI-COORDINATION.md  ORCHESTRATION.md  PIPELINE.md  PROMPTS-CLI.md  SKILL.md  WORKFLOW-TOKEN-OPTIMIZED.md
reference-docs/references/: bieu-mau-chuan.md  evidence-grounding.md  icd-coding-rules.md  phac-do-thuoc.md  tai-lieu-tham-khao.md  treatment-pharmacy-review.md
reference-scripts/: audit-config.json  data-example.js  extract-pdf-text.py  grounding-cache.py  jobctl.py  render-report.js  run-batch.sh
