[project]
name = "emr-analyzer-backend"
version = "0.1.0"
description = "Local backend foundation for EMR Analyzer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.8,<3.0",
    "cryptography>=42,<47",
    "keyring>=25,<27",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emr"]
